# Isolpharm-Analysis

./: .gitignore  Senza nome.pages
Pd-Enriched/: analysis.cc  read.cc  readme.md
Pd-Enriched/AM241_42_CALIB_1502/: run.info  settings.xml
Pd-Enriched/Campione Pd-Enriched/: 1  10  11  12  13  14  15  16  17  172gauss.cc  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  39  4  40  41  42  43  44  (+52 more)
Pd-Enriched/CoMPASS_Reader-master/: CMakeLists.txt
Pd-Enriched/CoMPASS_Reader-master/include/: CompassEvent.hh  CompassROOT.hh  RunInformation.hh
Pd-Enriched/CoMPASS_Reader-master/macro/: integrate_ag.cc  join.cc  read_compass.cc  read_spectra.c
Pd-Enriched/CoMPASS_Reader-master/src/: Buffer.cc  CompassROOT.cc
Pd-Enriched/EU152_1502_42_CALIB/: run.info  settings.xml
Pd-Enriched/FONDO_1502_42_CALIB/: run.info  settings.xml
Pd-Enriched/include/: Buffer.hh  Utils.hh
Pd-Enriched/macro/: integrate.cc  integrate_311.cc  integrate_88keV.cc  rename.py
Tesi/: presentazione13_05.pptx
Tesi/appunti/: aprile2.txt  notes july.txt
Tesi/calibrazione/: Senza nome 2.numbers  area vs t 342 245.numbers  calibEuGe.txt  calibLaBrRedo.txt  dead_time_nuovo_2021.numbers  fitnoerr.txt
Tesi/pd enriched/: proiezione fit.pages
Tesi/theorical stuff/: ag11table.txt
appunti/: Appunti Tesi Agosto.pages  appunti aprile.txt  appunti marzo.txt  note tesi luglio.txt
calibrazione/: calibGeconErr.txt  efficiency values for peaks.txt  fitERRrisultati.txt  risultatiFitRisoluzione.txt
calibrazione/analysis data/: Analisi.txt  AreaFitPostDtCorrection.txt  DT correction.txt  Dead Time.ods  Fit stuff.xlsx
calibrazione/root programs/: FitLin.cc  calibEuLa.txt  calibGeconErr.txt  dataResolutionLaBr3.txt  dt356.txt  dtHPGe.cc  effHPGe.txt  effHPGe2.txt  (+4 more)
pd enriched/: Efficienze con errori.pages  proiezione fit.pages
theorical stuff/: HPGe.doc
(+118 files in other folders)
